[package]
name = "impact-nft"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "impact_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build"
]

[dependencies]
# needed to fix a bug in older versions of ahash. Note - solana-program includes two versions, a broken 0.7.* version
# and a fixed 0.8.* version. This ensures that dependencies using the 0.7 channel do not pick up the broken one.
ahash = "0.7.8"
anchor-lang = { version = "0.30.1" }
anchor-spl = { version = "0.30.1", features = ["metadata", "mpl-token-metadata"] }

